--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
                   <li>Go to garage for tools</li>
                   <li>Go to Pick n Pull</li>
                   <li>Go to Garage</li>
-                  <li>Home for 3:30</li>
-                  <li>Eat</li>
+                  <li>Home for 2:00</li>
+                  <li>Shower and Eat</li>
+                  <li>Program</li>
                   <li>Pick up love for 4:50?</li>
                 </ol>
               </h5>
@@ -73,6 +74,9 @@
             <h3 class="text-center">Thursday</h3>
               <h5>
                 <ol>
+                  <li>Drive Love to work</li>
+                  <li>Step 1</li>
+                  <li>Step 1</li>
                   <li>Step 1</li>
                   <li>Step 1</li>
                   <li>Step 1</li>
@@ -90,9 +94,9 @@
             <h3 class="text-center">Friday</h3>
               <h5>
                 <ol>
-                  <li>Step 1</li>
-                  <li>Step 1</li>
-                  <li>Step 1</li>
+                  <li>School work</li>
+                  <li>Lunch</li>
+                  <li>Nap?</li>
                 </ol>
               </h5>
         </div>
@@ -151,7 +155,7 @@
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
           <hr>
-          <button class="btn btn-primary btn-xl animated bounce">Find out more</button>
+          <a href="love.html"><button class="btn btn-primary btn-xl animated bounce">Find out more</button></a>
         </section>
       </div>
     </div>
