--- a/index.html
+++ b/index.html
@@ -75,11 +75,9 @@
               <h5>
                 <ol>
                   <li>Drive Love to work</li>
-                  <li>Step 1</li>
-                  <li>Step 1</li>
-                  <li>Step 1</li>
-                  <li>Step 1</li>
-                  <li>Step 1</li>
+                  <li>Go to Garage</li>
+                  <li>Finish that dang car</li>
+                  
                 </ol>
               </h5>
         </div>
